@@ -159,6 +159,7 @@ require 'mongo/error/invalid_database_name'
 require 'mongo/error/invalid_document'
 require 'mongo/error/invalid_file'
 require 'mongo/error/invalid_file_revision'
+require 'mongo/error/invalid_max_connecting'
 require 'mongo/error/invalid_min_pool_size'
 require 'mongo/error/invalid_read_option'
 require 'mongo/error/invalid_application_name'
