@@ -797,6 +797,32 @@ describe Mongo::Client do
         end
       end
 
+      context 'when max_connecting is provided' do
+        let(:client) do
+          new_local_client_nmio(SINGLE_CLIENT, options)
+        end
+
+        context 'when max_connecting is a positive integer' do
+          let(:options) do
+            { max_connecting: 5 }
+          end
+
+          it 'sets the max connecting' do
+            expect(client.options[:max_connecting]).to eq(options[:max_connecting])
+          end
+        end
+
+        context 'when max_connecting is a negative integer' do
+          let(:options) do
+            { max_connecting: -5 }
+          end
+
+          it 'raises an exception' do
+            expect { client }.to raise_error(Mongo::Error::InvalidMaxConnecting)
+          end
+        end
+      end
+
       context 'when min_pool_size is provided' do
         let(:client) { new_local_client_nmio(SINGLE_CLIENT, options) }
 
@@ -996,6 +1022,28 @@ describe Mongo::Client do
 
         it 'sets the options' do
           expect(client.options).to eq(expected_options)
+        end
+
+        context 'when max_connecting is provided' do
+          context 'when max_connecting is a positive integer' do
+            let(:uri) do
+              'mongodb://127.0.0.1:27017/?maxConnecting=10'
+            end
+
+            it 'sets the max connecting' do
+              expect(client.options[:max_connecting]).to eq(10)
+            end
+          end
+
+          context 'when max_connecting is a negative integer' do
+            let(:uri) do
+              'mongodb://127.0.0.1:27017/?maxConnecting=0'
+            end
+
+            it 'raises an exception' do
+              expect { client }.to raise_error(Mongo::Error::InvalidMaxConnecting)
+            end
+          end
         end
 
         context 'when min_pool_size is provided' do
